# gym-streamlit-dashboard

./: .env.example  .gitignore  README.md  app.py  dev-plan.md  pyproject.toml  requirements.yaml  upload_exercise_mapping.py
.github/agents/: copilot-instructions.md
.github/prompts/: speckit.constitution.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md
config/: bigquery_config.yaml  csv_schema.yaml  exercise_mapping.yaml  exercise_mapping.yaml.backup
modules/: __init__.py  analytics.py  app_common.py  bigquery_uploader.py  bigquery_views.py  config_loader.py  csv_parser.py  data_enrichment.py  visualizations.py
pages/: Analytics.py
specs/001-gcp-terraform-iac/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gcp-terraform-iac/checklists/: requirements.md
specs/001-gcp-terraform-iac/contracts/: inputs.md  outputs.md
specs/002-workout-analytics-views/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-workout-analytics-views/checklists/: requirements.md
specs/002-workout-analytics-views/contracts/: inputs.md  outputs.md
sql/: README.md
sql/views/: exercise_performance_metrics.sql  kpi_workouts.sql  workout_frequency_by_exercise.sql  workout_frequency_by_muscle_group.sql
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: sample_workout_data.csv  test_analytics.py  test_bigquery_views.py  test_visualizations.py
